cambio de fonts

--- a/SCSS/_variables.scss
+++ b/SCSS/_variables.scss
@@ -5,7 +5,7 @@ $blanco1: #f1f1f1;
 $blanco2: #e5e5e5;
 $negro: #000000;
 $negro1: #212529;
-$ftitulo: "bebas";
-$ttitulo: 9rem;
+$ftitulo: "Bebas Neue";
+$ttitulo: 11rem;
 $fparrafo: "montserrat";
 $tparrafo: 1.8rem;
