--- a/makeitcss.css
+++ b/makeitcss.css
@@ -51,9 +51,10 @@ a {
 h1,
 h2 {
   margin: 0px;
-  font-family: "bebas";
+  font-family: "Bebas Neue";
   font-weight: normal;
-  font-size: 9rem; }
+  font-size: 11rem;
+  line-height: 1; }
 
 h3 {
   font-family: "montserrat";
@@ -77,7 +78,7 @@ p {
   position: fixed;
   z-index: 2; }
   .header a {
-    font-family: "bebas", "arial";
+    font-family: "Bebas Neue", "arial";
     color: white;
     text-decoration: none;
     font-size: 2rem;
