--- a/SCSS/_contacto.scss
+++ b/SCSS/_contacto.scss
@@ -88,7 +88,7 @@
 
 .mapa {
     position: absolute;
-    height: 100vh;
+    min-height: 100vh;
     z-index: 0;
     filter: saturate(0) opacity(20%);
 }
