--- a/SCSS/_responsive.scss
+++ b/SCSS/_responsive.scss
@@ -91,6 +91,16 @@
         text-align: center;
         position: relative;
         z-index: 1;
+        padding: 15px;
+        p {
+            padding-left: 0;
+            padding-right: 0;
+        }
+        h2 {
+            font-size: 8rem;
+            margin: 0px;
+            margin-bottom: 20px;
+        }
     }
     div#makeittext {
         order: 1;
@@ -130,6 +140,11 @@
         flex-direction: column;
         justify-content: center;
         padding: 0px;
+        h2 {
+            font-size: 10rem;
+            margin: inherit;
+            margin-top: 50px;
+        }
     }
     .flexservicios {
         display: flex;
@@ -137,6 +152,145 @@
         flex-wrap: wrap;
         justify-content: space-around;
         margin: 50px;
+    }
+    //NOSOTROS
+    .integrante {
+        min-height: none;
+        display: grid;
+        grid-template-columns: repeat(1, 100%);
+    }
+    .nosotroscaption {
+        h2 {
+            margin-left: 0;
+            margin-top: 0;
+        }
+        p {
+            line-height: 1.7;
+        }
+        margin: 40px;
+    }
+    .belen {
+        height: 600px;
+        background-image: url("img/belen blanco.jpg");
+        background-position: top;
+    }
+    .javier {
+        height: 600px;
+        background-image: url("img/javier blanco.png");
+        background-position: top;
+    }
+    #javiertext {
+        order: 1;
+    }
+    #javierimg {
+        order: 2;
+    }
+    .melisa {
+        height: 600px;
+        background-image: url("img/melisa blanco.png");
+        background-position: top;
+    }
+    .camila {
+        height: 600px;
+        background-image: url("img/camila blanco.png");
+        background-position: top;
+    }
+    #camilatext {
+        order: 1;
+    }
+    #camilaimg {
+        order: 2;
+    }
+    //CLIENTES
+    .clientes {
+        width: 100%;
+    }
+    .gridmarcas {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 100px;
+        z-index: 1;
+    }
+    .marcas {
+        max-width: 40%;
+        &:hover {
+            max-width: 40%;
+            filter: invert(0%) saturate(1) brightness(1) opacity(100%);
+            transform: scale(1.8);
+        }
+        margin-bottom: 30px;
+    }
+    //BOOSTER
+    .goolepartner {
+        h2 {
+            margin-left: 0;
+            margin-top: 0;
+        }
+        p {
+            line-height: 1.7;
+        }
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: left;
+    }
+    .goolepartnerflex {
+        margin: 40px;
+    }
+    .googlepartner-text {
+        padding-bottom: 20px;
+    }
+    .center {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+    .booster-section {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+    .booster-funcion {
+        padding-bottom: 40px;
+    }
+    .booster-list {
+        width: 80%;
+        margin-right: -40px;
+    }
+    //CONTACTO
+    .contacto {
+        min-height: 100vh;
+        display: flex;
+        flex-direction: inherit;
+        justify-content: center;
+        color: white;
+        background-color: black;
+    }
+    .contactoflex {
+        margin: 20px;
+        padding-top: 70px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        position: relative;
+        z-index: 1;
+    }
+    .contactocol {
+        width: 90%;
+        justify-content: center;
+        align-items: center;
+    }
+    .formcontacto {
+        #checkcontacto {
+            font-size: 1.6rem;
+        }
+    }
+    .mapa {
+        position: absolute;
+        min-height: 300vh;
+        z-index: 0;
+        filter: saturate(0) opacity(20%);
     }
 }
 
