--- a/SCSS/_clientes.scss
+++ b/SCSS/_clientes.scss
@@ -11,6 +11,7 @@
         
         .textclientes {
             margin: 70px;
+            padding-top: 50px;
             width: 80%;
             z-index: 1;
         }
