--- a/makeitcss.css
+++ b/makeitcss.css
@@ -22,6 +22,8 @@ h6 {
 
 * {
   box-sizing: inherit; }
+  * ul {
+    margin-top: inherit; }
 
 html {
   font-size: 62.5%;
@@ -32,9 +34,6 @@ body {
   margin: 0px;
   max-width: 100%;
   overflow-x: hidden; }
-
-li {
-  display: inline-block; }
 
 footer {
   color: white;
@@ -81,7 +80,7 @@ p {
     font-family: "Bebas Neue", "arial";
     color: white;
     text-decoration: none;
-    font-size: 2rem;
+    font-size: 2.5rem;
     padding-left: 20px;
     padding-right: 20px;
     transition: 0.5s; }
@@ -94,9 +93,8 @@ p {
 .navmenu {
   display: flex;
   flex-direction: row;
-  align-items: center;
   width: 90%;
-  padding: 20px; }
+  padding: 10px; }
 
 .logomenu {
   width: 20%;
@@ -105,6 +103,8 @@ p {
 .listamenu {
   position: absolute;
   right: 20px; }
+  .listamenu li {
+    display: inline-block; }
 
 /*Menu REPONSIVE*/
 .logomenumobile {
@@ -165,10 +165,11 @@ p {
   background-color: black;
   align-items: center;
   position: relative;
-  z-index: 2;
-  padding: 50px; }
+  z-index: 2; }
   .footer a {
     color: white; }
+  .footer h6 {
+    cursor: pointer; }
 
 .logofooter {
   display: flex;
@@ -188,7 +189,15 @@ p {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  margin: 0px; }
+  margin: 0px;
+  box-sizing: border-box; }
+
+.poweredby {
+  padding: inherit;
+  background-color: #1f1f1f;
+  font-weight: 100;
+  padding: 5px;
+  text-align: center; }
 
 .creamoscontenido {
   display: flex;
@@ -241,6 +250,9 @@ p {
   position: relative;
   padding: 50px;
   z-index: 1; }
+  .wemakeitgrid p {
+    padding-left: 100px;
+    padding-right: 100px; }
 
 .imgcomputadora {
   width: 100%;
@@ -333,6 +345,7 @@ p {
 
 .textclientes {
   margin: 70px;
+  padding-top: 50px;
   width: 80%;
   z-index: 1; }
 
@@ -451,9 +464,86 @@ p {
 
 .mapa {
   position: absolute;
-  height: 100vh;
+  min-height: 100vh;
   z-index: 0;
   filter: saturate(0) opacity(20%); }
+
+.booster1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  color: white;
+  background-image: url("img/booster.png");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat; }
+
+.booster1flex {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+
+.goolepartner {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  justify-content: center;
+  align-items: center;
+  text-align: left; }
+
+.goolepartnerflex {
+  margin: 70px;
+  height: 90%; }
+
+.googlepartner-text {
+  padding-bottom: 100px; }
+
+.sellopartner {
+  box-shadow: 0px 10px 10px rgba(80, 80, 80, 0.295); }
+
+.imgpartner {
+  width: 100%;
+  position: relative;
+  right: 0px; }
+
+.booster-section {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center; }
+
+.booster-funcion {
+  padding-bottom: 100px; }
+
+.booster-list {
+  font-family: "montserrat";
+  font-size: 1.8rem;
+  width: 60%;
+  text-align: left; }
+  .booster-list ol {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    counter-reset: lista; }
+  .booster-list li {
+    margin-bottom: 40px; }
+  .booster-list li:before {
+    content: counter(lista);
+    counter-increment: lista;
+    background-image: linear-gradient(100.37deg, #610098 38.77%, #440098 82.37%);
+    border-radius: 50%;
+    font-weight: bold;
+    color: #FFFFFF;
+    width: 50px;
+    height: 50px;
+    padding-top: 10px;
+    text-align: center;
+    display: inline-block;
+    box-sizing: border-box;
+    margin-left: -50px; }
 
 .quienessomos {
   display: flex;
@@ -465,7 +555,8 @@ p {
   background-image: url("img/nosotros.png");
   background-position: center;
   background-size: cover;
-  background-repeat: no-repeat; }
+  background-repeat: no-repeat;
+  text-align: center; }
 
 .quienesomosflex {
   display: flex;
@@ -490,9 +581,8 @@ p {
   background-repeat: no-repeat;
   width: 100%;
   transition: 0.5s; }
-
-.belen:hover {
-  background-image: url("img/belen blanco.jpg"); }
+  .belen:hover {
+    background-image: url("img/belen blanco.jpg"); }
 
 .javier {
   background-image: url("img/javier negro.png");
@@ -501,9 +591,8 @@ p {
   background-repeat: no-repeat;
   width: 100%;
   transition: 0.5s; }
-
-.javier:hover {
-  background-image: url("img/javier blanco.png"); }
+  .javier:hover {
+    background-image: url("img/javier blanco.png"); }
 
 .melisa {
   background-image: url("img/melisa negro.png");
@@ -512,9 +601,8 @@ p {
   background-repeat: no-repeat;
   width: 100%;
   transition: 0.5s; }
-
-.melisa:hover {
-  background-image: url("img/melisa blanco.png"); }
+  .melisa:hover {
+    background-image: url("img/melisa blanco.png"); }
 
 .camila {
   background-image: url("img/camila negro.png");
@@ -523,42 +611,8 @@ p {
   background-repeat: no-repeat;
   width: 100%;
   transition: 0.5s; }
-
-.camila:hover {
-  background-image: url("img/camila blanco.png"); }
-
-.booster1 {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  color: white;
-  background-image: url("img/booster.png");
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat; }
-
-.booster1flex {
-  display: flex;
-  flex-direction: column;
-  align-items: center; }
-
-.goolepartner {
-  height: 100vh;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center; }
-
-.goolepartnerflex {
-  margin: 70px;
-  width: 70%; }
-
-.imgpartner {
-  width: 100%;
-  position: relative;
-  right: 0px; }
+  .camila:hover {
+    background-image: url("img/camila blanco.png"); }
 
 @media (max-width: 1024px) and (max-height: 1367px) {
   h1 {
@@ -637,7 +691,15 @@ p {
     justify-content: space-around;
     text-align: center;
     position: relative;
-    z-index: 1; }
+    z-index: 1;
+    padding: 15px; }
+    .wemakeitgrid p {
+      padding-left: 0;
+      padding-right: 0; }
+    .wemakeitgrid h2 {
+      font-size: 8rem;
+      margin: 0px;
+      margin-bottom: 20px; }
   div#makeittext {
     order: 1;
     margin-top: 5vh; }
@@ -670,12 +732,119 @@ p {
     flex-direction: column;
     justify-content: center;
     padding: 0px; }
+    .servicios h2 {
+      font-size: 10rem;
+      margin: inherit;
+      margin-top: 50px; }
   .flexservicios {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin: 50px; } }
+    margin: 50px; }
+  .integrante {
+    min-height: none;
+    display: grid;
+    grid-template-columns: repeat(1, 100%); }
+  .nosotroscaption {
+    margin: 40px; }
+    .nosotroscaption h2 {
+      margin-left: 0;
+      margin-top: 0; }
+    .nosotroscaption p {
+      line-height: 1.7; }
+  .belen {
+    height: 600px;
+    background-image: url("img/belen blanco.jpg");
+    background-position: top; }
+  .javier {
+    height: 600px;
+    background-image: url("img/javier blanco.png");
+    background-position: top; }
+  #javiertext {
+    order: 1; }
+  #javierimg {
+    order: 2; }
+  .melisa {
+    height: 600px;
+    background-image: url("img/melisa blanco.png");
+    background-position: top; }
+  .camila {
+    height: 600px;
+    background-image: url("img/camila blanco.png");
+    background-position: top; }
+  #camilatext {
+    order: 1; }
+  #camilaimg {
+    order: 2; }
+  .clientes {
+    width: 100%; }
+  .gridmarcas {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 100px;
+    z-index: 1; }
+  .marcas {
+    max-width: 40%;
+    margin-bottom: 30px; }
+    .marcas:hover {
+      max-width: 40%;
+      filter: invert(0%) saturate(1) brightness(1) opacity(100%);
+      transform: scale(1.8); }
+  .goolepartner {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: left; }
+    .goolepartner h2 {
+      margin-left: 0;
+      margin-top: 0; }
+    .goolepartner p {
+      line-height: 1.7; }
+  .goolepartnerflex {
+    margin: 40px; }
+  .googlepartner-text {
+    padding-bottom: 20px; }
+  .center {
+    margin-left: 20px;
+    margin-right: 20px; }
+  .booster-section {
+    margin-left: 20px;
+    margin-right: 20px; }
+  .booster-funcion {
+    padding-bottom: 40px; }
+  .booster-list {
+    width: 80%;
+    margin-right: -40px; }
+  .contacto {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: inherit;
+    justify-content: center;
+    color: white;
+    background-color: black; }
+  .contactoflex {
+    margin: 20px;
+    padding-top: 70px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    position: relative;
+    z-index: 1; }
+  .contactocol {
+    width: 90%;
+    justify-content: center;
+    align-items: center; }
+  .formcontacto #checkcontacto {
+    font-size: 1.6rem; }
+  .mapa {
+    position: absolute;
+    min-height: 300vh;
+    z-index: 0;
+    filter: saturate(0) opacity(20%); } }
 
 @media only screen and (min-width: 1025px) {
   .overlaynav {
